--- a/style/layout/_layout.scss
+++ b/style/layout/_layout.scss
@@ -51,6 +51,21 @@ header{
       @include justify-content-center;
       @include self-text-align;
       @include flex-wrap;
+      .multi{
+        font-weight: bold;  
+        margin: 5px;
+        padding: 5px 10px 5px 10px;
+        background-color : $primary-color;
+        border: 1px solid $primary-color;
+        color: $tertiary-color;
+        border-radius: 5px;
+        cursor: pointer;
+        -ms-flex-wrap: nowrap;
+        flex-wrap: nowrap;
+        &:hover, &:active{border: 1px solid $fourth-color;}
+        @include mobile-style{font-size: 150%;}
+        @include truemobile-style{font-size: 100%;}
+      }
     }  
     @include tablet-style{
       #logo{
