--- a/style/pages/_home.scss
+++ b/style/pages/_home.scss
@@ -59,7 +59,7 @@
 		  position: absolute;
 		  top: 0;
 		  left: 20px;
-		  z-index: 9999;      
+		  z-index: 99;      
   		-webkit-box-shadow: 0 5px 20px 3px rgba(0, 0, 0, 0.6);      
   		box-shadow: 0 5px 20px 3px rgba(0, 0, 0, 0.6);
 			.portrait{
@@ -243,4 +243,86 @@ footer{
         transition: .5s;
       }
     }
-} 
+}
+
+/*Result modal*/
+.bground2{
+  letter-spacing: 1px;
+  //display: none;
+  position: fixed;
+  z-index: 100;
+  left: 0;
+  top: 0;
+  height: 100%;
+  width: 100%;
+  overflow: auto;
+  background-color: $around-modal-bg-color;
+  .content2{
+  	z-index: 100;
+    margin: 5% auto;
+    width: 100%;
+    max-width: 500px;
+    -webkit-animation-name: modalopen;
+    animation-name: modalopen;
+    -webkit-animation-duration: 0.8s;
+    animation-duration: 0.8s;
+    background: $tertiary-color;
+    border: 5px solid $primary-color;
+    -webkit-box-shadow: 0 5px 20px 3px rgba(0, 0, 0, 0.6);
+    box-shadow: 0 5px 20px 3px rgba(0, 0, 0, 0.6);
+    border-radius: 5px;
+    overflow: hidden;
+    position: relative;
+    padding-top: 20px;
+    height: 100%;
+    max-height: 500px;
+    @include just-flex;
+    @include justify-content-center;
+    top: 40%;
+    -webkit-transform: translateY(-40%);
+    -ms-transform: translateY(-40%);
+    transform: translateY(-40%);
+    p{
+      line-height: 90%;
+      font-size: 250%;
+      text-align: left;
+      font-weight: 600;
+    }
+    .modal-body2{
+      margin: 15px auto;
+      -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+      @include justify-content-center;
+      .reaction{
+        padding: 10px;
+        @include flex-column;
+        @include justify-content-center;
+        h1{
+          width: 60%;            
+          padding: 5px 10px 5px 10px;
+          border: 1px solid $fourth-color;
+          background-color : $fourth-color;
+          color: $primary-color;
+          border-radius: 5px;
+          @include self-text-align; 
+          @include truemobile-style{width: 80%;}   
+        }
+        p{
+          font-size: 200%;
+          @include self-text-align;
+          color: $primary-color;
+          @include flex-wrap;
+          line-height: 120%;  
+          padding: 0px 20px 0px 20px; 
+          @include truemobile-style{font-size: 150%;}        
+        }  
+      }
+    }
+    @include mobile-style{max-width: 480px;}
+    @include truemobile-style{
+      max-width: 80vw;
+      min-width: 298px;;
+    }
+  }          
+}
