added multiplayer button

--- a/style/pages/_home.scss
+++ b/style/pages/_home.scss
@@ -248,7 +248,7 @@ footer{
 /*Result modal*/
 .bground2{
   letter-spacing: 1px;
-  //display: none;
+  display: none;/////////////////////////////
   position: fixed;
   z-index: 100;
   left: 0;
