--- a/style/pages/_home.scss
+++ b/style/pages/_home.scss
@@ -247,43 +247,38 @@ footer{
 
 /*modal*/
 .bground2{
-  letter-spacing: 1px;
-  display: none;
-  position: fixed;
-  z-index: 100;
-  left: 0;
-  top: 0;
+	z-index: 100;
+	display: none;
+	position: fixed;
+	top: 0;
+	left: 0;
+  letter-spacing: 1px;  
+  z-index: 100;  
   height: 100%;
   width: 100%;
   overflow: auto;
   background-color: $around-modal-bg-color;
   .content2{
   	z-index: 100;
+  	top: 20vh;
     margin: 5% auto;
     width: 50vw;
-    -webkit-animation-name: modalopen;
-    animation-name: modalopen;
-    -webkit-animation-duration: 0.8s;
-    animation-duration: 0.8s;
+    height: auto;
+    max-height: 50%;
+    -webkit-animation: scale-in-center 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+	  animation: scale-in-center 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+	  -webkit-box-shadow: 0 5px 20px 3px rgba(0, 0, 0, 0.6);
+	  box-shadow: 0 5px 20px 3px rgba(0, 0, 0, 0.6);
+	  border-radius: 15px;   
+    border: 2px solid $primary-color;
     background: $tertiary-color;
-    border: 5px solid $primary-color;
-    -webkit-box-shadow: 0 5px 20px 3px rgba(0, 0, 0, 0.6);
-    box-shadow: 0 5px 20px 3px rgba(0, 0, 0, 0.6);
-    border-radius: 5px;
     overflow: hidden;
     position: relative;
-    padding-top: 20px;
-    height: 100%;
-    max-height: 500px;
+    padding: 20px;
     @include just-flex;
-    @include justify-content-center;
-    top: 40%;
-    -webkit-transform: translateY(-40%);
-    -ms-transform: translateY(-40%);
-    transform: translateY(-40%);
+    @include justify-content-center;   
     font-size: 100%;
-    text-align: justify;
-    font-weight: 600;
+    text-align: justify;    
     .modal-body2{
     	@include flex-column;
     	width: 100%;
@@ -299,18 +294,34 @@ footer{
       	@include self-text-align;
       }
       .firstH1{margin-right: 8%;}
+      .close{      	
+      	background-color: $primary-color;
+      	border-radius: 5px;
+      	border: 5px solid $primary-color;
+      	&:before, &:after{background-color: $fourth-color;}
+      	&:hover{
+      		color: $primary-color;
+			    background: $fourth-color;
+			    transition: .4s;
+			    &:before, &:after{background-color: $primary-color;}
+			  }	
+      }
       .modal-form{ 
       	@include flex-column;
 	      width: 100%;
     		height: 50%;
       	margin: auto;
-      	.formData{@include just-flex; width: 50%;  	margin: auto;}
+      	.formData{
+      		@include just-flex;
+      		width: 60%;
+      		margin: auto;
+      	}
       	.btn {
       		width: 200px;
       		height: 40px;      		
       		margin: auto;
-      		color: $primary-color;
-    			background: $fourth-color;  			
+      		color: $fourth-color;
+    			background: $primary-color;  			
 			    font-weight: bold;
 			    font-size: 120%;
 			    border-radius: 5px;
@@ -319,31 +330,35 @@ footer{
 			    outline: none;
 			    user-select: none;
 			    &:hover{
-			      color: $fourth-color;
-			      background: $primary-color;
+			      color: $primary-color;
+			      background: $fourth-color;
 			      transition: .4s;
-			      @include truemobile-style{
-			        background: $fourth-color;
-			        color: $primary-color;
-			      }
 			    }		
 			  }
 			 	label{
 	        font-size: 150%;
+	        border-radius: 5px;
+      		border: 2px solid $fourth-color;
+      		font-size: bold;
+	      	font-weight:800;
+	      	padding: 5px;
 	        color: $primary-color;
+	        background-color: $fourth-color;
        		width: 50%;
        		@include self-text-align;
-      		margin: auto;
-        	@include truemobile-style{margin: 11px 0px 11px 0px;}
+      		margin: auto; 
       	}
       	input{
+      		border-radius: 5px;
       		margin: 20px;
 	        padding: 8px;
         	border: 0.8px solid #ccc;
         	outline: none;
-        	font-size: 300%;
+        	font: 1.5em lato, Arial;
+        	color: $fourth-color;
+        	font-weight: bold;        	
 	      }
-	      .lastLine{
+	      .lastLine{	 
 	      	width: 50%;
 	      	@include just-flex;
 	      	@include justify-content-center;
