--- a/style/pages/quizpage.scss
+++ b/style/pages/quizpage.scss
@@ -281,15 +281,13 @@ main{
     margin: 5% auto;
     width: 100%;
     max-width: 500px;
-    -webkit-animation-name: modalopen;
-    animation-name: modalopen;
-    -webkit-animation-duration: 0.8s;
-    animation-duration: 0.8s;
+    -webkit-animation: scale-in-center 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
+    animation: scale-in-center 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
     background: $tertiary-color;
-    border: 5px solid $primary-color;
     -webkit-box-shadow: 0 5px 20px 3px rgba(0, 0, 0, 0.6);
     box-shadow: 0 5px 20px 3px rgba(0, 0, 0, 0.6);
-    border-radius: 5px;
+    border-radius: 15px;   
+    border: 2px solid $primary-color;
     overflow: hidden;
     position: relative;
     padding-top: 20px;
