--- a/style/utils/_animations.scss
+++ b/style/utils/_animations.scss
@@ -588,7 +588,7 @@
   }
 }
 
-/*Modal animation*/
+/*Modal animation score*/
 @-webkit-keyframes modalopen {
   from {
     opacity: 0;
@@ -604,4 +604,31 @@
     transform: translateY(-150px);
   }
   to {opacity: 1;}
+}
+
+/*Modal animation multi*/
+
+@-webkit-keyframes scale-in-center {
+  0% {
+    -webkit-transform: scale(0);
+            transform: scale(0);
+    opacity: 1;
+  }
+  100% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+    opacity: 1;
+  }
+}
+@keyframes scale-in-center {
+  0% {
+    -webkit-transform: scale(0);
+            transform: scale(0);
+    opacity: 1;
+  }
+  100% {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+    opacity: 1;
+  }
 }
