--- a/style/pages/_home.scss
+++ b/style/pages/_home.scss
@@ -264,7 +264,7 @@ footer{
     margin: 5% auto;
     width: 50vw;
     height: auto;
-    max-height: 50%;
+    max-height: 90vh;
     -webkit-animation: scale-in-center 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
 	  animation: scale-in-center 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
 	  -webkit-box-shadow: 0 5px 20px 3px rgba(0, 0, 0, 0.6);
@@ -277,23 +277,16 @@ footer{
     padding: 20px;
     @include just-flex;
     @include justify-content-center;   
-    font-size: 100%;
-    text-align: justify;    
+    font-size: 100%;      
     .modal-body2{
     	@include flex-column;
     	width: 100%;
-    	height: auto;
+    	height: auto;    	
       margin: 20px;
       -ms-flex-item-align: center;
       -ms-grid-row-align: center;
       align-self: center;
       @include justify-content-center;
-      h1{      	
-      	color: $primary-color;
-      	font-size: 150%;
-      	@include self-text-align;
-      }
-      .firstH1{margin-right: 8%;}
       .close{      	
       	background-color: $primary-color;
       	border-radius: 5px;
@@ -305,71 +298,127 @@ footer{
 			    transition: .4s;
 			    &:before, &:after{background-color: $primary-color;}
 			  }	
+			  @include tablet-style{
+    			transform: scale(1);    	
+			  	border: 5px solid $tertiary-color;
+			  	background-color: $tertiary-color;
+  				&:before, &:after{background-color: $primary-color;}  	
+  			}
+  			@include mobile-style{
+  				right: -5px;
+    			top: 0px;
+    			transform: scale(0.7); 
+  			}
       }
+      h1{      	
+      	color: $primary-color;
+      	font-size: 150%;
+      	text-align: justify;
+      	@include mobile-style{font-size: 130%;}
+      	@include truemobile-style{font-size: 100%;}
+      }
+      .firstH1{margin-right: 8%;}   
       .modal-form{ 
       	@include flex-column;
 	      width: 100%;
     		height: 50%;
       	margin: auto;
-      	.formData{
+      	.formData{      
+      		@include justify-content-center;
       		@include just-flex;
-      		width: 60%;
+      		width: 100%;
       		margin: auto;
-      	}
-      	.btn {
-      		width: 200px;
-      		height: 40px;      		
-      		margin: auto;
-      		color: $fourth-color;
-    			background: $primary-color;  			
-			    font-weight: bold;
-			    font-size: 120%;
-			    border-radius: 5px;
-			    cursor: pointer;
-			    border: none;
-			    outline: none;
-			    user-select: none;
-			    &:hover{
-			      color: $primary-color;
-			      background: $fourth-color;
-			      transition: .4s;
-			    }		
-			  }
-			 	label{
-	        font-size: 150%;
-	        border-radius: 5px;
-      		border: 2px solid $fourth-color;
-      		font-size: bold;
-	      	font-weight:800;
-	      	padding: 5px;
-	        color: $primary-color;
-	        background-color: $fourth-color;
-       		width: 50%;
-       		@include self-text-align;
-      		margin: auto; 
-      	}
-      	input{
-      		border-radius: 5px;
-      		margin: 20px;
-	        padding: 8px;
-        	border: 0.8px solid #ccc;
-        	outline: none;
-        	font: 1.5em lato, Arial;
-        	color: $fourth-color;
-        	font-weight: bold;        	
-	      }
-	      .lastLine{	 
-	      	width: 50%;
+      		label{
+      			flex-wrap: nowrap;
+      			font-size: 150%;
+		        border-radius: 5px;
+	      		border: 2px solid $fourth-color;
+	      		font-size: bold;
+		      	font-weight:800;
+		      	padding: 5px;
+		        color: $primary-color;
+		        background-color: $fourth-color;
+	       		width: 50%;	
+	       		max-width : 250px;      
+	       		@include self-text-align;
+	       		@include mobile-style{
+	        		width: 65%;
+	        		font-size: 99%;
+	        		padding: 3px;
+	        	}
+	        	@include truemobile-style{
+	        		//width: 50%;
+	        		font-size: 80%;	        	
+	        	}  
+	      	}
+	      	input{	     
+	      		max-width : 200px;  	
+	      		border-radius: 5px;
+	      		margin: 20px;
+		        padding: 8px;
+	        	border: 0.8px solid #ccc;
+	        	outline: none;
+	        	font: 1.5em lato, Arial;
+	        	color: $fourth-color;
+	        	font-weight: bold;
+	        	@include mobile-style{
+	        		width: 45%;
+	        		padding: 3px;
+	        	}
+	        	@include truemobile-style{
+	        		margin: 10px;
+	        		font: 1.1em lato, Arial;
+	        		padding: 10px;   
+	        		}   	
+		      }
+		    }
+		    .lastLine{	 
+	      	width: 100%;
 	      	@include just-flex;
 	      	@include justify-content-center;
 	      	margin: auto;
-	      }
-      }
-     }
-    @include mobile-style{max-width: 480px;}
-    @include truemobile-style{
-      max-width: 80vw;
-      min-width: 298px;;
-    }
-  }          
-}
+	      	.btn {
+	      		flex-wrap: nowrap;
+	      		width: 30%;
+	      		height: 40px;      		
+	      		margin: auto;
+	      		color: $fourth-color;
+	    			background: $primary-color;  			
+				    font-weight: bold;
+				    font-size: 120%;
+				    border-radius: 5px;
+				    cursor: pointer;
+				    border: none;
+				    outline: none;
+				    user-select: none;
+				    &:hover{
+				      color: $primary-color;
+				      background: $fourth-color;
+				      transition: .4s;
+				    }
+				    @include tablet-style{width: 45%;}
+				    @include mobile-style{
+	        		width: 45%;
+	        		height: 60px;
+	        	}      		
+			  	}
+	     	}	      
+      }      
+   	}
+   	@include tablet-style{
+   		width: 70vw;
+	  	height: auto;
+		}
+    @include mobile-style{
+    	top: 10vh;
+    		//top: 15;
+	  	//background-color: red;
+	  	margin-left: auto;
+	  	margin-right: auto;
+	  	//width: 70vw;
+	  	//height: 87vh;
+	  	height: auto;
+	  }
+	  @include truemobile-style{top:3vh;}
+	 }	  
+	}
