--- a/style/pages/quizpage.scss
+++ b/style/pages/quizpage.scss
@@ -295,7 +295,7 @@ main{
     max-height: 500px;
     @include just-flex;
     @include justify-content-center;
-    top: 40%;
+    //top: 40%;
     -webkit-transform: translateY(-40%);
     -ms-transform: translateY(-40%);
     transform: translateY(-40%);
@@ -346,3 +346,4 @@ main{
     }
   }          
 }
+
