--- a/style/pages/_home.scss
+++ b/style/pages/_home.scss
@@ -295,19 +295,24 @@ footer{
       	&:hover{
       		color: $primary-color;
 			    background: $fourth-color;
+			    -webkit-transition: .4s;
+			    -o-transition: .4s;
 			    transition: .4s;
 			    &:before, &:after{background-color: $primary-color;}
 			  }	
 			  @include tablet-style{
-    			transform: scale(1);    	
+    			transform: scale(0.7); 
+    			right: -5px;
+    			top: 0px; 
+    			width: 55px;
+    			height: 40; 	
+  			}
+  			@include truemobile-style{
+  				top: -5px; 
 			  	border: 5px solid $tertiary-color;
 			  	background-color: $tertiary-color;
   				&:before, &:after{background-color: $primary-color;}  	
-  			}
-  			@include mobile-style{
-  				right: -5px;
-    			top: 0px;
-    			transform: scale(0.7); 
+    			transform: scale(0.5); 
   			}
       }
       h1{      	
@@ -315,10 +320,15 @@ footer{
       	font-size: 150%;
       	text-align: justify;
       	@include mobile-style{font-size: 130%;}
-      	@include truemobile-style{font-size: 100%;}
+      	@include truemobile-style{flex:1;}
+      	@include minimobile-style{flex: 0.5;}
       }
-      .firstH1{margin-right: 8%;}   
-      .modal-form{ 
+      .firstH1{
+      	margin-right: 8%;
+      	@include truemobile-style{z-index : 3;}
+      }   
+      .modal-form{
+      overflow: auto; 
       	@include flex-column;
 	      width: 100%;
     		height: 50%;
@@ -329,6 +339,7 @@ footer{
       		width: 100%;
       		margin: auto;
       		label{
+      			-ms-flex-wrap: nowrap;
       			flex-wrap: nowrap;
       			font-size: 150%;
 		        border-radius: 5px;
@@ -346,10 +357,7 @@ footer{
 	        		font-size: 99%;
 	        		padding: 3px;
 	        	}
-	        	@include truemobile-style{
-	        		//width: 50%;
-	        		font-size: 80%;	        	
-	        	}  
+	        	@include truemobile-style{font-size: 80%;}  
 	      	}
 	      	input{	     
 	      		max-width : 200px;  	
@@ -369,7 +377,7 @@ footer{
 	        		margin: 10px;
 	        		font: 1.1em lato, Arial;
 	        		padding: 10px;   
-	        		}   	
+	        	}   	
 		      }
 		    }
 		    .lastLine{	 
@@ -378,6 +386,7 @@ footer{
 	      	@include justify-content-center;
 	      	margin: auto;
 	      	.btn {
+	      		-ms-flex-wrap: nowrap;
 	      		flex-wrap: nowrap;
 	      		width: 30%;
 	      		height: 40px;      		
@@ -390,20 +399,33 @@ footer{
 				    cursor: pointer;
 				    border: none;
 				    outline: none;
-				    user-select: none;
+				    -webkit-user-select: none;
+				       -moz-user-select: none;
+				        -ms-user-select: none;
+				            user-select: none;
 				    &:hover{
 				      color: $primary-color;
 				      background: $fourth-color;
+				      -webkit-transition: .4s;
+				      -o-transition: .4s;
 				      transition: .4s;
 				    }
 				    @include tablet-style{width: 45%;}
 				    @include mobile-style{
-	        		width: 45%;
-	        		height: 60px;
+	        		width: 80%;
+	        		padding: 5px;
+	        		height: auto;
 	        	}      		
 			  	}
-	     	}	      
-      }      
+	     	}
+	     	@include truemobile-style{flex: 1;}
+	     	 @include minimobile-style{flex: 2;}     
+      }
+    @include truemobile-style{
+    	height: 80%;
+    	width: 95%;
+    }
+    @include minimobile-style{height:95%;}      
    	}
    	@include tablet-style{
    		width: 70vw;
@@ -411,14 +433,14 @@ footer{
 		}
     @include mobile-style{
     	top: 10vh;
-    		//top: 15;
-	  	//background-color: red;
-	  	margin-left: auto;
+    	margin-left: auto;
 	  	margin-right: auto;
-	  	//width: 70vw;
-	  	//height: 87vh;
 	  	height: auto;
 	  }
-	  @include truemobile-style{top:3vh;}
+	  @include truemobile-style{
+	  	top:3vh;
+	  	height: 80vh;
+	  }
+	  @include minimobile-style{font-size:80%;}
 	 }	  
 	}
