--- a/style/layout/_layout.scss
+++ b/style/layout/_layout.scss
@@ -56,17 +56,17 @@ header{
         font-weight: bold;  
         margin: 5px;
         padding: 5px 10px 5px 10px;
-        background-color : $primary-color;
-        border: 2px solid $primary-color;
-        color: $tertiary-color;
+        //background-color : $primary-color;
+        border: 2px solid $fourth-color;
+        color: $primary-color;
         border-radius: 5px;
         cursor: pointer;
         -ms-flex-wrap: nowrap;
         flex-wrap: nowrap;
         &:hover, &:active{ 
-          background-color : $tertiary-color;
-          border: 1px solid $tertiary-color;
-          color: $primary-color;
+          background-color : $primary-color;
+          border: 1px solid $primary-color;
+          color: $tertiary-color;
           transition: .3s;
           border: 2px solid $fourth-color;
         }
