--- a/style/layout/_layout.scss
+++ b/style/layout/_layout.scss
@@ -99,6 +99,7 @@ header{
   border-radius : 0px 0px 20px 20px;
   display: none;
   .Player{
+    width:45%;
     min-width: 152px;
     box-shadow: 0 5px 20px 3px rgba(0, 0, 0, 0.3);
     font-size: 150%;
