--- a/style/pages/quizpage.scss
+++ b/style/pages/quizpage.scss
@@ -347,3 +347,11 @@ main{
   }          
 }
 
+.thatPlayer{
+  background-color: $fourth-color;
+  color: $primary-color;
+  border-radius: 5px;
+  padding: 5px;
+  width: 50vh;
+  margin: auto;
+}
