--- a/style/layout/_layout.scss
+++ b/style/layout/_layout.scss
@@ -56,7 +56,7 @@ header{
         font-weight: bold;  
         margin: 5px;
         padding: 5px 10px 5px 10px;
-        /*background-color : $primary-color;*/
+        box-shadow: 0 2px 5px 2px rgba(0, 0, 0, 0.3);//newshadow
         border: 2px solid $fourth-color;
         color: $primary-color;
         border-radius: 5px;
@@ -64,6 +64,8 @@ header{
         -ms-flex-wrap: nowrap;
         flex-wrap: nowrap;
         &:hover, &:active{ 
+          background-image: url("../Ressources/Textures/2.png");//texture
+          background-blend-mode: multiply;// texture
           background-color : $primary-color;
           border: 1px solid $primary-color;
           color: $tertiary-color;
@@ -104,8 +106,11 @@ header{
   .Player{
     width:45%;
     min-width: 152px;
+    background-image: url("../Ressources/Textures/2.png");//texture
+    background-blend-mode: multiply;//texture
+    background-size: cover;//texture
     -webkit-box-shadow: 0 5px 20px 3px rgba(0, 0, 0, 0.3);
-            box-shadow: 0 5px 20px 3px rgba(0, 0, 0, 0.3);
+    box-shadow: 0 5px 20px 3px rgba(0, 0, 0, 0.3);
     font-size: 150%;
     @include just-flex;
     @include justify-content-center;
@@ -119,7 +124,6 @@ header{
       font-weight: bold;
       color: $fourth-color;
        @include self-text-align;
-       /*font-size: 120%;    */
     }
     .score{
       margin: 0px 5px 0px 5px;
@@ -133,8 +137,7 @@ header{
       color: $primary-color;
       border-radius: 50px;
       width: 30px;
-      /*height: 30px;*/
-      padding: 5px;
+        padding: 5px;
       font-size: 100%;
       @include justify-content-center;
     }
@@ -145,15 +148,31 @@ header{
     }
   }
   .player1{border-radius : 0px 15px 5px 15px;}
-  .player2{border-radius : 15px 0px 15px 5px;}
+  .player2{
+    border-radius : 15px 0px 15px 5px;
+
+    /* flip background vertically */
+    -webkit-transform:scalex(-1);
+    -moz-transform:scalex(-1);
+    -ms-transform:scalex(-1);
+    -o-transform:scalex(-1);
+    transform:scalex(-1);
+    }
+
+    /* undo the vertical flip for all child elements */
+    .player2 * {
+    -webkit-transform:scalex(-1);
+    -moz-transform:scalex(-1);
+    -ms-transform:scalex(-1);
+    -o-transform:scalex(-1);
+    transform:scalex(-1);
+    }
+  
   .player1, .player2{@include mobile-style{border-radius: 5px;}}
   .contre{
     @include self-text-align;
     margin: 5px;
-    p{ margin: 5px;
-      -webkit-animation: heartbeat 2s ease-in-out infinite alternate both;
-      animation: heartbeat 2s ease-in-out infinite alternate both;
-    }
+    p{margin: 5px;}
     color: $primary-color;
     font-weight: bold;
     font-size: 200%;
