--- a/style/pages/quizpage.scss
+++ b/style/pages/quizpage.scss
@@ -188,7 +188,6 @@ main{
     &:hover{
       color: $primary-color;
       background: $fourth-color;
-      //border: 1px solid $fourth-color;
       -webkit-transition: .4s;
       -o-transition: .4s;
       transition: .4s;
@@ -197,23 +196,6 @@ main{
         color: $tertiary-color;
       }
     }
-    /*
-    &:active{
-      -webkit-transform: scale(1.05);
-      -ms-transform: scale(1.05);
-      transform: scale(1.05);
-      -webkit-transition: -webkit-transform .1s;
-      transition: -webkit-transform .1s;
-      -o-transition: transform .1s;
-      transition: transform .1s;
-      transition: transform .1s, -webkit-transform .1s;
-      @include truemobile-style{
-        -webkit-transform: none;
-        -ms-transform: none;
-        transform: none;
-      }
-    }
-    */
     p{
       font-size: 1.3rem;
       margin: 0;
@@ -356,4 +338,7 @@ main{
   padding: 5px;
   width: 50vh;
   margin: auto;
+  box-shadow: 0 2px 5px 2px rgba(0, 0, 0, 0.3);//newshadow
+  -webkit-animation: heartbeat 2.8s linear infinite 0.8s both;
+    animation: heartbeat 2.8s linear infinite 0.8s both;
 }
