css style and textured backgrounds

--- a/style/utils/_animations.scss
+++ b/style/utils/_animations.scss
@@ -667,7 +667,7 @@
     opacity: 1;
   }
 }
-/*Pulsation VS*/
+/*Pulsation VS & player turn animation*/
 @-webkit-keyframes heartbeat {
   from {
     -webkit-transform: scale(1);
@@ -800,4 +800,4 @@
 }
 
 
-/*player turn animation*/
+
