--- a/style/components/_components.scss
+++ b/style/components/_components.scss
@@ -2,7 +2,7 @@
 /*Tags*/
 .films, .series, .jeux-video, .bede,
 .animes, .allTags, .livres{
-  box-shadow: 0 2px 5px 2px rgba(0, 0, 0, 0.3);//newshadow
+  box-shadow: 0 2px 5px 2px rgba(0, 0, 0, 0.3);
   font-weight: bold;  
   margin: 5px;
   padding: 5px 10px 5px 10px;
