--- a/style/pages/quizpage.scss
+++ b/style/pages/quizpage.scss
@@ -169,6 +169,7 @@ main{
     color: $tertiary-color;
     background: $primary-color;
     border: 1px solid $primary-color;
+    box-shadow: 0 2px 5px 2px rgba(0, 0, 0, 0.3);
     -webkit-box-flex: 1;
     -ms-flex: 1 0 45%;
     flex: 1 0 45%;
@@ -338,7 +339,7 @@ main{
   padding: 5px;
   width: 50vh;
   margin: auto;
-  box-shadow: 0 2px 5px 2px rgba(0, 0, 0, 0.3);//newshadow
+  box-shadow: 0 2px 5px 2px rgba(0, 0, 0, 0.3);
   -webkit-animation: heartbeat 2.8s linear infinite 0.8s both;
-    animation: heartbeat 2.8s linear infinite 0.8s both;
+  animation: heartbeat 2.8s linear infinite 0.8s both;
 }
