--- a/style/layout/_layout.scss
+++ b/style/layout/_layout.scss
@@ -106,9 +106,6 @@ header{
   .Player{
     width:45%;
     min-width: 152px;
-    background-image: url("../Ressources/Textures/2.png");//texture
-    background-blend-mode: multiply;//texture
-    background-size: cover;//texture
     -webkit-box-shadow: 0 5px 20px 3px rgba(0, 0, 0, 0.3);
     box-shadow: 0 5px 20px 3px rgba(0, 0, 0, 0.3);
     font-size: 150%;
@@ -146,27 +143,18 @@ header{
         border-radius: 5px 5px 5px 5px;
     }
   }
-  .player1{border-radius : 0px 15px 5px 15px;}
+  .player1{
+    border-radius : 0px 15px 5px 15px;
+    background-image: url("../Ressources/Textures/2.png");//texture
+    background-blend-mode: multiply;//texture
+    background-size: cover;//texture
+  }
   .player2{
     border-radius : 15px 0px 15px 5px;
-
-    /* flip background vertically */
-    -webkit-transform:scalex(-1);
-    -moz-transform:scalex(-1);
-    -ms-transform:scalex(-1);
-    -o-transform:scalex(-1);
-    transform:scalex(-1);
-    }
-
-    /* undo the vertical flip for all child elements */
-    .player2 * {
-    -webkit-transform:scalex(-1);
-    -moz-transform:scalex(-1);
-    -ms-transform:scalex(-1);
-    -o-transform:scalex(-1);
-    transform:scalex(-1);
-    }
-  
+    background-image: url("../Ressources/Textures/2neg.png");//texture
+    background-blend-mode: multiply;//texture
+    background-size: cover;//texture
+  }  
   .player1, .player2{@include mobile-style{border-radius: 5px;}}
   .contre{
     @include self-text-align;
