--- a/style/pages/quizpage.scss
+++ b/style/pages/quizpage.scss
@@ -71,6 +71,7 @@
 
 /*BANNER*/
 .banner{
+  box-shadow: 0 2px 5px 2px rgba(0, 0, 0, 0.3);
   @include flex-column;
   width: 100%;  
   min-width: 225px;   
