--- a/style/layout/_layout.scss
+++ b/style/layout/_layout.scss
@@ -56,7 +56,7 @@ header{
         font-weight: bold;  
         margin: 5px;
         padding: 5px 10px 5px 10px;
-        box-shadow: 0 2px 5px 2px rgba(0, 0, 0, 0.3);//newshadow
+        box-shadow: 0 2px 5px 2px rgba(0, 0, 0, 0.3);
         border: 2px solid $fourth-color;
         color: $primary-color;
         border-radius: 5px;
@@ -64,8 +64,8 @@ header{
         -ms-flex-wrap: nowrap;
         flex-wrap: nowrap;
         &:hover, &:active{ 
-          background-image: url("../Ressources/Textures/2.png");//texture
-          background-blend-mode: multiply;// texture
+          background-image: url("../Ressources/Textures/2.png");
+          background-blend-mode: multiply;
           background-color : $primary-color;
           border: 1px solid $primary-color;
           color: $tertiary-color;
@@ -144,15 +144,15 @@ header{
   }
   .player1{
     border-radius : 0px 15px 5px 15px;
-    background-image: url("../Ressources/Textures/2.png");//texture
+    background-image: url("../Ressources/Textures/2.png");
     background-blend-mode: multiply;//texture
     background-size: cover;//texture
   }
   .player2{
     border-radius : 15px 0px 15px 5px;
-    background-image: url("../Ressources/Textures/2neg.png");//texture
-    background-blend-mode: multiply;//texture
-    background-size: cover;//texture
+    background-image: url("../Ressources/Textures/2neg.png");
+    background-blend-mode: multiply;
+    background-size: cover;
   }  
   .player1, .player2{@include mobile-style{border-radius: 5px;}}
   .contre{
